<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_below="@+id/resultsText"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/limitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp"
        android:text="@string/limitText" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/searchKeywords"
        android:inputType="textPersonName"
        android:text="@string/searchBar" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/seekBar"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@+id/limitText"
        android:layout_toRightOf="@+id/limitText"
        android:max="@integer/seekbarMax" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/limitText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="14dp"
        android:text="@string/searchButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_toEndOf="@+id/searchButton"
        android:layout_toRightOf="@+id/searchButton"
        android:text="@string/resetButton" />

    <TextView
        android:id="@+id/sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="21dp"
        android:text="@string/sortBy" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/resetButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:layout_toEndOf="@+id/sortBy"
        android:layout_toRightOf="@+id/sortBy"
        android:text="@string/toggleButton"
        android:textOff="@string/priceSort"
        android:textOn="@string/dateSort" />

    <TextView
        android:id="@+id/resultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:text="@string/resultsText" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        tools:visibility="invisible" />


</RelativeLayout>