<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trackText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="8dp"
                android:text="@string/trackText" />

            <TextView
                android:id="@+id/artistText"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trackText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="33dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="19dp"
                android:text="@string/artistText" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="41dp"
                android:layout_marginLeft="41dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:layout_toEndOf="@+id/trackText"
                android:layout_toRightOf="@+id/trackText"
                android:text="@string/priceText" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="87dp"
                android:layout_marginLeft="87dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:layout_toEndOf="@+id/artistText"
                android:layout_toRightOf="@+id/artistText"
                android:text="@string/dateText" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>